--- a/privacy.html
+++ b/privacy.html
@@ -2,61 +2,215 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Política de Privacidad</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Política de Privacidad - My Voto 2025</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      max-width: 900px;
       margin: 0 auto;
       padding: 20px;
-      line-height: 1.6;
-    }
-    h1, h2 {
+      line-height: 1.7;
       color: #333;
+      background-color: #f9f9f9;
+    }
+    .container {
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #2c3e50;
+      text-align: center;
+      border-bottom: 3px solid #e74c3c;
+      padding-bottom: 15px;
+      margin-bottom: 30px;
+    }
+    h2 {
+      color: #34495e;
+      margin-top: 30px;
+      border-left: 4px solid #3498db;
+      padding-left: 15px;
+    }
+    .warning-box {
+      background-color: #fff3cd;
+      border: 2px solid #ffeaa7;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 20px 0;
+      font-weight: bold;
+    }
+    .important-box {
+      background-color: #f8d7da;
+      border: 2px solid #f5c6cb;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 20px 0;
+      color: #721c24;
+    }
+    .info-box {
+      background-color: #d1ecf1;
+      border: 2px solid #bee5eb;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 20px 0;
+      color: #0c5460;
+    }
+    ul, ol {
+      padding-left: 25px;
+    }
+    li {
+      margin-bottom: 8px;
+    }
+    .contact-info {
+      background-color: #e8f5e8;
+      padding: 15px;
+      border-radius: 5px;
+      margin-top: 20px;
+    }
+    a {
+      color: #3498db;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .emoji {
+      font-size: 1.2em;
+    }
+    .disclaimer-header {
+      background-color: #e74c3c;
+      color: white;
+      padding: 15px;
+      border-radius: 5px;
+      text-align: center;
+      font-size: 1.1em;
+      font-weight: bold;
+      margin-bottom: 25px;
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="disclaimer-header">
+      <span class="emoji">🚨</span> AVISO IMPORTANTE: Esta aplicación NO es oficial ni está afiliada con ninguna entidad gubernamental, electoral o política
+    </div>
 
-  <h1>Política de Privacidad</h1>
+    <h1>Política de Privacidad</h1>
+    <p><strong>Fecha de entrada en vigencia:</strong> 22 de junio de 2025</p>
+    
+    <div class="important-box">
+      <h3><span class="emoji">⚠️</span> NATURALEZA DE LA APLICACIÓN</h3>
+      <p>Esta aplicación es un <strong>sondeo independiente y no oficial</strong> que permite expresar preferencias sobre candidatos presidenciales. <strong>NO constituye una votación real ni tiene validez electoral oficial.</strong></p>
+      <p>Los resultados de este sondeo:</strong></p>
+      <ul>
+        <li>NO tienen validez oficial</li>
+        <li>NO son compartidos con entidades gubernamentales</li>
+        <li>NO reemplazan ni simulan procesos electorales oficiales</li>
+        <li>Son utilizados únicamente para fines estadísticos y de investigación de opinión pública</li>
+      </ul>
+    </div>
 
-  <p><strong>Fecha de entrada en vigencia:</strong> 22 de junio de 2025</p>
+    <h2><span class="emoji">📊</span> Propósito de la Aplicación</h2>
+    <p>Esta aplicación ha sido desarrollada como un proyecto independiente de investigación de opinión pública que permite a los usuarios expresar su apoyo hacia candidatos presidenciales mediante una simulación de voto única por dispositivo. Valoramos tu privacidad y nos comprometemos a proteger la información que recopilamos.</p>
 
-  <p>Esta aplicación ha sido desarrollada para permitir que los usuarios expresen su apoyo a un candidato presidencial mediante una votación única por dispositivo. Valoramos tu privacidad y nos comprometemos a proteger la información que recopilamos.</p>
+    <h2><span class="emoji">📱</span> Datos que Recopilamos</h2>
+    <p>La aplicación genera una firma única del dispositivo utilizando únicamente información técnica, con el fin de asegurar que cada usuario solo pueda emitir un voto por dispositivo.</p>
+    <p>Los datos utilizados para generar esta clave son:</p>
+    <ul>
+      <li>Identificador único del dispositivo (como Android ID o Identifier for Vendor en iOS)</li>
+      <li>Modelo del dispositivo</li>
+      <li>Marca del dispositivo</li>
+      <li>Versión del sistema operativo</li>
+    </ul>
+    <div class="info-box">
+      <p><strong><span class="emoji">✅</span> No recopilamos ni almacenamos datos personales</strong> como nombre, dirección de correo electrónico, número de teléfono, ubicación geográfica o contenido personal del dispositivo.</p>
+    </div>
 
-  <h2>Datos que recopilamos</h2>
-  <p>La aplicación genera una firma única del dispositivo utilizando únicamente información técnica, con el fin de asegurar que cada usuario solo pueda emitir un voto por dispositivo.</p>
-  <p>Los datos utilizados para generar esta clave son:</p>
-  <ul>
-    <li>Identificador único del dispositivo (como Android ID o Identifier for Vendor en iOS)</li>
-    <li>Modelo del dispositivo</li>
-    <li>Marca del dispositivo</li>
-    <li>Versión del sistema operativo</li>
-  </ul>
+    <h2><span class="emoji">🔧</span> Uso de la Información</h2>
+    <p>La información del dispositivo se utiliza exclusivamente para:</p>
+    <ul>
+      <li>Generar una clave única y anónima para prevenir votos duplicados</li>
+      <li>Garantizar la integridad del sondeo mediante un voto por dispositivo</li>
+      <li>Mantener estadísticas agregadas y anónimas de participación</li>
+      <li>Validar que el dispositivo ha participado en el sondeo</li>
+    </ul>
+    <p><strong>No se almacena la información original del dispositivo, solo el valor encriptado (hash).</strong></p>
 
-  <p><strong>No recopilamos ni almacenamos datos personales</strong> como nombre, dirección de correo electrónico, número de teléfono, ubicación o contenido del dispositivo.</p>
+    <h2><span class="emoji">🔒</span> Seguridad y Protección</h2>
+    <p>Todos los datos se manejan de manera segura y se cifran localmente antes de ser procesados. Además, la aplicación implementa medidas de seguridad para garantizar la integridad del sistema:</p>
+    <ul>
+      <li>Detecta si el dispositivo está rooteado o modificado</li>
+      <li>Detecta si se está ejecutando en un emulador</li>
+      <li>Verifica si el modo desarrollador está activado</li>
+      <li>Utiliza algoritmos de encriptación para proteger la información</li>
+      <li>No almacena datos en servidores externos no autorizados</li>
+    </ul>
 
-  <h2>Uso de la información</h2>
-  <p>La información del dispositivo se utiliza exclusivamente para generar una clave única y anónima. Esta clave garantiza que solo se emita un voto por dispositivo. No se almacena la información original, solo el valor encriptado (hash).</p>
+    <h2><span class="emoji">🔍</span> Transparencia y Limitaciones</h2>
+    <p>La participación en este sondeo es completamente anónima. No hay forma de vincular la clave generada con la identidad del usuario. Es importante entender que:</p>
+    <ul>
+      <li>Este es un sondeo de opinión independiente sin validez oficial</li>
+      <li>Los resultados reflejan únicamente las preferencias de los usuarios de la aplicación</li>
+      <li>No representa una muestra científica de la población general</li>
+      <li>Los desarrolladores no tienen afiliación política, electoral o gubernamental</li>
+      <li>La aplicación no influye ni interfiere en procesos electorales oficiales</li>
+    </ul>
 
-  <h2>Seguridad</h2>
-  <p>Todos los datos se manejan de manera segura y se cifran localmente antes de ser procesados. Además, la aplicación implementa medidas de seguridad para garantizar la integridad del sistema de votación:</p>
-  <ul>
-    <li>Detecta si el dispositivo está rooteado</li>
-    <li>Detecta si se está ejecutando en un emulador</li>
-    <li>Verifica si el modo desarrollador está activado</li>
-  </ul>
+    <h2><span class="emoji">📋</span> Retención y Eliminación de Datos</h2>
+    <ul>
+      <li>Las claves de dispositivo se mantienen únicamente durante el período del sondeo</li>
+      <li>No se conservan datos personales identificables</li>
+      <li>Los datos agregados pueden conservarse para análisis estadísticos anónimos</li>
+      <li>Los usuarios pueden solicitar información sobre el tratamiento de sus datos</li>
+    </ul>
 
-  <h2>Transparencia y anonimato</h2>
-  <p>La votación es completamente anónima. No hay forma de vincular la clave generada con la identidad del usuario. Solo se utiliza para validar que el dispositivo ha votado.</p>
+    <h2><span class="emoji">🏛️</span> Fuentes de Información Electoral Oficial</h2>
+    <div class="warning-box">
+      <p><strong>Para información electoral oficial y procesos de votación legítimos, los ciudadanos deben consultar:</strong></p>
+      <ul>
+        <li>Organismos electorales nacionales oficiales</li>
+        <li>Tribunales o consejos electorales gubernamentales</li>
+        <li>Sitios web gubernamentales oficiales</li>
+        <li>Instituciones públicas autorizadas para procesos electorales</li>
+      </ul>
+      <p><strong>Esta aplicación NO proporciona información electoral oficial ni reemplaza fuentes gubernamentales autorizadas.</strong></p>
+    </div>
 
-  <h2>Cumplimiento con Google Play</h2>
-  <p>Esta aplicación declara el uso de identificadores del dispositivo, tal como lo exige la política de Datos del Usuario de Google Play. No compartimos esta información con terceros.</p>
+    <h2><span class="emoji">📱</span> Cumplimiento con Google Play</h2>
+    <p>Esta aplicación declara apropiadamente el uso de identificadores del dispositivo, tal como lo exigen las políticas de Datos del Usuario de Google Play. No compartimos esta información con terceros no autorizados y cumplimos con todas las regulaciones aplicables de privacidad de datos.</p>
 
-  <h2>Contacto</h2>
-  <p>Si tienes preguntas sobre esta política de privacidad, puedes escribirnos a: <a href="mailto:miguelhangelh@gmail.com">miguelhangelh@gmail.com</a></p>
+    <h2><span class="emoji">⚖️</span> Descargo de Responsabilidad Legal</h2>
+    <div class="important-box">
+      <p>Esta aplicación es un proyecto independiente de investigación de opinión pública. <strong>No asumimos responsabilidad por interpretaciones erróneas de los resultados como información electoral oficial.</strong> Los usuarios reconocen que:</p>
+      <ul>
+        <li>La aplicación es únicamente para fines de sondeo de opinión</li>
+        <li>Los resultados no tienen validez legal, electoral o gubernamental</li>
+        <li>No debe ser utilizada como sustituto de procesos electorales oficiales</li>
+      </ul>
+    </div>
 
-  <p>Gracias por participar en este ejercicio democrático y por confiar en nuestra aplicación.</p>
+    <h2><span class="emoji">📞</span> Contacto y Soporte</h2>
+    <div class="contact-info">
+      <p>Para consultas sobre esta política de privacidad, el funcionamiento de la aplicación o ejercer tus derechos de privacidad:</p>
+      <p><strong>Email:</strong> <a href="mailto:miguelhangelh@gmail.com">miguelhangelh@gmail.com</a></p>
+      <p><strong>Tiempo de respuesta:</strong> Nos comprometemos a responder consultas relacionadas con privacidad en un plazo máximo de 72 horas.</p>
+    </div>
 
+    <h2><span class="emoji">🔄</span> Actualizaciones de la Política</h2>
+    <p>Esta política de privacidad puede ser actualizada periódicamente. Los cambios significativos serán notificados a través de la aplicación. La fecha de la última actualización siempre estará visible en la parte superior de este documento.</p>
+
+    <div class="info-box">
+      <p><strong><span class="emoji">🙏</span> Agradecimiento</strong></p>
+      <p>Gracias por participar en este ejercicio de investigación de opinión pública y por confiar en nuestra aplicación. Tu privacidad y la transparencia sobre el propósito no oficial de este sondeo son nuestras prioridades principales.</p>
+    </div>
+
+    <hr style="margin: 30px 0; border: 1px solid #ddd;">
+    <p style="text-align: center; color: #7f8c8d; font-size: 0.9em;">
+      <strong>Versión:</strong> 2.0 | <strong>Última actualización:</strong> 22 de junio de 2025<br>
+      <em>Documento generado para cumplir con las políticas de Google Play Store</em>
+    </p>
+  </div>
 </body>
 </html>
