--- a/privacy.html
+++ b/privacy.html
@@ -168,13 +168,15 @@
 
     <h2><span class="emoji">🏛️</span> Fuentes de Información Electoral Oficial</h2>
     <div class="warning-box">
-      <p><strong>Para información electoral oficial y procesos de votación legítimos, los ciudadanos deben consultar:</strong></p>
+      <p><strong>Para información electoral oficial y procesos de votación legítimos, los ciudadanos deben consultar ÚNICAMENTE las siguientes fuentes oficiales:</strong></p>
       <ul>
-        <li>Organismos electorales nacionales oficiales</li>
-        <li>Tribunales o consejos electorales gubernamentales</li>
-        <li>Sitios web gubernamentales oficiales</li>
-        <li>Instituciones públicas autorizadas para procesos electorales</li>
+        <li><strong>Tribunal Supremo Electoral (TSE):</strong> <a href="https://www.oep.org.bo" target="_blank">www.oep.org.bo</a></li>
+        <li><strong>Órgano Electoral Plurinacional (OEP):</strong> Entidad oficial encargada de procesos electorales</li>
+        <li><strong>Servicio de Registro Cívico (SERECÍ):</strong> Para registro de ciudadanos y documentación</li>
+        <li><strong>Ministerio de Gobierno:</strong> Para información sobre procesos electorales oficiales</li>
+        <li><strong>Gaceta Oficial del Estado:</strong> Para normativas y fechas oficiales de elecciones</li>
       </ul>
+      <p><strong>Esta aplicación NO está afiliada, autorizada o reconocida por ninguna de estas instituciones gubernamentales.</strong></p>
       <p><strong>Esta aplicación NO proporciona información electoral oficial ni reemplaza fuentes gubernamentales autorizadas.</strong></p>
     </div>
 
